--- a/estilo/media-query.css
+++ b/estilo/media-query.css
@@ -1,52 +1,25 @@
 @charset "UTF-8";
 
-@media screen and (min-width: 782px) and (max-width: 992px) {
+/*
+  1. Mobile (menos que 600px)
+  @media screen and (max-width: 599px) {}
 
-    body{
-        background-image: linear-Gradient(to top, orangered, rgba(0, 0, 0, 0.411) )
-    }
+  2. Mobile (600px a 767px)
+  @media screen and (min-width: 600px) and (max-width: 767px) 
 
-    section#imagem {
-        width: 80vw;
-    }
+  3. Tablet (768px a 1023px)
+  @media screen and (min-width: 768px) and (max-width: 1023px) 
 
-    section#login > div#imagem{
-        float: left;
-        width: 30%;
-        height: 100%;;
-    }
+  4. Desktop (1024px a 1279px)
+  @media screen and (min-width: 1024px) and (max-width: 1279px)
 
-        section#login > div#formulario{
-            float: right;
-            width: 70%;
-          
-        }
+  5. Large Desktop (1280px a 1919px)
+  @media screen and (min-width: 1280px) and (max-width: 1919px) 
 
-}
+  6. Extra Large Desktop (1920px ou mais)
+  @media screen and (min-width: 1920px) 
+*/
 
-@media screen and (min-width: 992px){
+@media screen and (min-width: 768px) and (max-width: 1023px) {
     
-    section#login {
-        width: 990px;
-    }
-
-    section#login > div#imagem{
-        float: left;
-        width: 50%;
-        height: 100%;
-    
-    }
-
-    section#login > div#formulario{
-        float: right;
-        width: 50%;
-    }
-
-    body{
-        background-image: linear-Gradient(to top, orangered, rgba(0, 0, 0, 0.397) )
-    }
-
-
-
 }
-
