--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,51 +1,50 @@
 @charset "UTF-8";
 
 * {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Times New Roman', Times, serif;
     padding: 0px;
     margin: 0px;
-    box-sizing: border-box;
+    
 }
 
 body, html {
     background-color: orangered;
     height: 100vh;
     width: 100vw;
+    
 }
 
 main{
     height: 100vh;
     width: 100vw;
     position: relative;
-
 }
 
-section#login{
-    background-color: white;
-    width: 350px;
-    height: 440px;
-    border-radius: 15px;
-    position: absolute;
+section#login {
+    position:absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    overflow: hidden;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.418);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.473);
 
-    transition: width .3s, height .3s;
-    transition-timing-function: ease
+    overflow: hidden; 
+    /* serve pare aredodar a borda da imagem que coloquei dentro da div */
+
+    background-color: beige;
+    height: 500px;
+    width: 250px;
+    border-radius: 20px;
 }
 
-div#imagem{
-    background: orange url(../imagem/pexels-tino-coelho-308723248-30626526.jpg) no-repeat;
-    height: 180px;
-    background-size: cover;
+section#login > div#imagem{
     display: block;
-    
+    background: orange url(../imagem/pexels-tino-coelho-308723248-30626526.jpg) no-repeat;
+    background-size: cover;
+    height: 200px;
+
 }
 
-section#login > div#formulario{
-    padding: 20px;
-    text-align: justify;
+section#login > div#formulario {
+    padding: 10px;
     display: block;
 }
