--- a/estilo/media-query.css
+++ b/estilo/media-query.css
@@ -21,5 +21,37 @@
 */
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
-    
+
+
+    section#login{
+      width: 70vw;
+    }
+
+    section#login > div#imagem {
+      float: left;
+      width: 30%;
+      height: 100%;
+    }
+
+    body {
+      background-image: linear-gradient(to top, orangered, rgba(0, 0, 0, 0.404));
+    }
+
+
 }
+
+  @media screen and (min-width: 1024px)  {
+    section#login {
+      width: 950px;
+    }
+
+    section#login > div#imagem{
+      float: left;
+      width: 50%;
+      height: 100%;
+    }
+
+    body {
+      background-image: linear-gradient(to top, orangered, rgba(0, 0, 0, 0.404));
+    }
+  }
