--- a/estilos/style.css
+++ b/estilos/style.css
@@ -34,6 +34,9 @@ section#login {
     height: 500px;
     width: 250px;
     border-radius: 20px;
+
+    transition: width 0.3, height 0.3;
+    transition-timing-function: ease;
 }
 
 section#login > div#imagem{
