--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 * {
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     padding: 0px;
     margin: 0px;
     
@@ -50,4 +50,14 @@ section#login > div#imagem{
 section#login > div#formulario {
     padding: 10px;
     display: block;
+}
+
+div#formulario {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+div#formulario > p {
+    font-size: 0.95em;
+
 }
