--- a/estilos/style.css
+++ b/estilos/style.css
@@ -65,3 +65,67 @@ div#formulario > p {
 label{
     display: none;
 }
+
+form > input[type=submit] {
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: orange;
+    color: white;
+    border: none;
+    border-radius: 10px;
+}
+
+form > input[type=submit]:hover {
+    background-color: rgb(219, 147, 14);
+}
+
+form > a.botao {
+    display: block;
+    text-align: center;
+    font-size: 1.09em;
+    height: 35px;
+    background-color: rgba(255, 255, 255, 0.473);
+    color: orange;
+    border: 1px solid orange;
+    border-radius: 10px;
+    text-decoration: none;
+    padding-top: 5px;
+    margin-top: 5px;
+}
+
+form > a.botao > i {
+    font-size: 0.9em;
+    text-align: center;
+}
+
+form > a.botao:hover{
+    background-color: rgba(255, 166, 0, 0.795);
+    color: white;
+}
+
+form > div.campo {
+    background-color: orangered;
+    height: 40px;
+    border-radius: 7px;
+    margin: 5px 0px;
+}
+
+div.campo > i {
+    color: white;
+    background-color: black;
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+
+div.campo > input {
+    background-color: rgb(255, 255, 255);
+    font-size: 1em;
+    width: ;
+    height: 100%;
+    border: none;
+    border-radius: 7px;
+    
+}
